<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.hackathon.zero.presentation.inputinfo.InputInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/topColorIndicatorView"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray600"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/topIndicatorView"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/topIndicatorView"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/gray200"
                    app:layout_constraintLeft_toRightOf="@id/topColorIndicatorView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/inputTitleTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="프로필 작성"
                    android:theme="@style/pretendard_bold.24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/pageNumberTextView"
                    app:layout_constraintTop_toBottomOf="@id/topIndicatorView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/pageNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="1/2"
                    android:theme="@style/pretendard_medium.15sp"
                    app:layout_constraintLeft_toRightOf="@id/inputTitleTextView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/inputTitleTextView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/inputSubTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/inputIntroText"
                    android:theme="@style/pretendard_medium.15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputTitleTextView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nameTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="48dp"
                    android:text="이름"
                    android:textColor="@color/gray800"
                    android:theme="@style/pretendard_bold.16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputSubTitleTextView" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/nameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shape_round_8"
                    android:padding="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameTitleTextView">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/nameInputView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/nameHintText"
                        android:maxLength="5"
                        android:text="@={vm.name}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/nameLengthView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nameLengthView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/nameInputView"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        bind:lengthText="@{vm.name.length()}"
                        bind:maxLength="@{5}" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genderTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/genderText"
                    android:textColor="@color/gray800"
                    android:theme="@style/pretendard_bold.16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameInputLayout" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/genderSelectLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/genderTitleTextView">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/manButton"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@{vm.isGenderSelectMan() ? @drawable/bg_stroke_red300_solid_red100_round_8 : @drawable/shape_round_8 }"
                        android:gravity="center"
                        android:onClick="@{() -> vm.manClicked()}"
                        android:text="남성"
                        android:textColor="@{vm.isGenderSelectMan() ? @color/gray900 : @color/gray300}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/womanButton"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="@{vm.isGenderSelectMan() ? @drawable/shape_round_8 : @drawable/bg_stroke_red300_solid_red100_round_8 }"
                        android:gravity="center"
                        android:onClick="@{() -> vm.womanClicked()}"
                        android:text="여성"
                        android:textColor="@{vm.isGenderSelectMan() ? @color/gray300 : @color/gray900}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/heightTitleView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/heightTexr"
                    android:theme="@style/pretendard_bold.16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/weightTitleView"
                    app:layout_constraintTop_toBottomOf="@id/genderSelectLayout" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weightTitleView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/weightText"
                    android:theme="@style/pretendard_bold.16sp"
                    app:layout_constraintLeft_toRightOf="@id/heightTitleView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genderSelectLayout" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/heightSelectView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/shape_round_8"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/weightSelectView"
                    app:layout_constraintTop_toBottomOf="@id/heightTitleView">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="start"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:text="@={vm.height}"
                        android:theme="@style/pretendard_medium.15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cm" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/weightSelectView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/shape_round_8"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintLeft_toRightOf="@id/heightSelectView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weightTitleView">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="numberDecimal"
                        android:text="@={vm.weight}"
                        android:theme="@style/pretendard_medium.15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="kg" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ageTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/age"
                    android:theme="@style/pretendard_bold.16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/heightSelectView" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ageSelectView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_round_8"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ageTitleView">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="만 " />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ellipsize="start"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:text="@={vm.age}"
                        android:theme="@style/pretendard_medium.15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="세" />

                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="32dp"
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/scrollV"
            android:background="@drawable/shape_round_8"
            android:backgroundTint="@color/red300"
            android:onClick="@{()-> vm.nextClicked()}"
            android:text="@string/next"
            android:textColor="@color/white"
            android:theme="@style/pretendard_bold.21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>